--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ css: ['index.css', 'sidebar-popular-repo.css']
             <!-- Pagination -->
             {% include pagination.html %}
 
+            <!-- Comments -->
+            {% include disqus-comments.html %}
+
         </div>
 
         <div class="col-md-4">
