change github link to display github username

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ css: ['index.css', 'sidebar-popular-repo.css']
             {% if site.github_url %}
             <span class="meta-info hvr-grow">
                 <span class="octicon octicon-mark-github"></span>
-                <a href="{{ site.github_url }}" target="_blank">@{{ site.name }}</a>
+                <a href="{{ site.github_url }}" target="_blank">@{{ site.github_username }}</a>
             </span> {% endif %}
         </div>
     </div>
