--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ css: ['index.css', 'sidebar-popular-repo.css']
                 <span class="octicon octicon-organization"></span>
                 <a href="{{ site.company_url }}" target="_blank">{{ site.company }}</a>
             </span> {% endif %}
-            {% if site.github_url %}
+            {% if site.github_username %}
             <span class="meta-info hvr-grow">
                 <span class="octicon octicon-mark-github"></span>
                 <a href="{{ site.github_url }}" target="_blank">@{{ site.github_username }}</a>
